# imagemask

./: Cargo.toml  README.md  flake.nix
src/: assert_sorted_iter.rs  async_io.rs  create_range.rs  lib.rs  map.rs  non_zero.rs  rect.rs  sanitize_sorted_disjoint.rs  set.rs  sorted_ranges.rs  sorted_ranges_map.rs  span.rs  unchecked_cast.rs  with_bounds.rs  with_roi.rs
src/map/: iter.rs  map_inplace.rs  offsets_iter.rs
src/range/: assert_sorted_iter.rs  async_io.rs  flat_map_inplace.rs  merge_ordered_iter.rs  mod.rs  non_zero.rs  range_to_offsets_iter.rs  sorted_ranges.rs  sorted_ranges_map.rs  unchecked_cast.rs
src/set/: affine_transform.rs  bounds_inspector.rs  chunk_by_row.rs  clip.rs  clip_2d.rs  dilate.rs  future.rs  iter.rs  iter_global.rs  map_inplace.rs  offsets_iter.rs  rect.rs  sanitize_sorted_disjoint.rs  split_rows.rs
src/span/: clip.rs  into_ranges.rs  rect.rs  union.rs
