[package]
name = "imagemask"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
range-set-blaze-0_5 = { package = "range-set-blaze", version = "0.5", default-features = false, optional = true }
thiserror = "2.0.12"
rkyv = { version = "0.8.15", optional = true }
num-traits = "0.2"

[features]
# default = ["range-set-blaze-0_5", "rkyv"]
